<resources>
    <string name="action_settings">Action Settings</string>
    <string name="app_name">Power_Grid</string>
    <string name="firstcity_txt">The First City</string>
    <string name="phase2_txt">Phase 2: Auction Power Plants</string>
    <string name="phase3_txt">Phase 3: Buying Resources</string>
    <string name="phase4_txt">Phase 4: Building</string>
    <string name="special_txt">Special Ability</string>
    <string name="debug">Debug</string>
</resources>
