<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#FFFFFF" tools:context=".Robot">

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/robot">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="225">

                <!-- Background -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/head"/>

                <!-- Text -->
                <FrameLayout
                    style="@style/Box"
                    android:id="@+id/head_box"
                    android:visibility="invisible"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="20dp"
                    android:layout_width="180dp"
                    android:layout_height="70dp">

                    <!-- The first city title -->
                    <TextView
                        style="@style/Phase"
                        android:text="@string/firstcity_txt"
                        android:layout_marginBottom="45dp"/>

                    <!-- Actions description -->
                    <TextView
                        style="@style/Action"
                        android:id="@+id/head_txt"/>

                </FrameLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/shoulders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="150">

                <!-- Background -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/shoulders"/>

                <!-- Text -->
                <FrameLayout
                    style="@style/Box"
                    android:id="@+id/shoulders_box"
                    android:visibility="invisible"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="370dp"
                    android:layout_height="90dp">

                    <!-- Phase 2 title -->
                    <TextView
                        style="@style/Phase"
                        android:text="@string/phase2_txt"
                        android:layout_marginBottom="65dp"/>

                    <!-- Actions description -->
                    <TextView
                        style="@style/Action"
                        android:id="@+id/shoulders_txt"/>

                </FrameLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/torso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="145">

                <!-- Background -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/torso"/>

                <!-- Text -->
                <FrameLayout
                    style="@style/Box"
                    android:id="@+id/torso_box"
                    android:visibility="invisible"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="355dp"
                    android:layout_height="90dp">

                    <!-- Phase 3 title -->
                    <TextView
                        style="@style/Phase"
                        android:text="@string/phase3_txt"
                        android:layout_marginBottom="65dp"/>

                    <!-- Actions description -->
                    <TextView
                        style="@style/Action"
                        android:id="@+id/torso_txt"/>

                </FrameLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/legs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="145">

                <!-- Background -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/legs"/>

                <!-- Text -->
                <FrameLayout
                    style="@style/Box"
                    android:id="@+id/legs_box"
                    android:visibility="invisible"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="175dp"
                    android:layout_height="125dp">

                    <!-- Phase 4 title -->
                    <TextView
                        style="@style/Phase"
                        android:text="@string/phase4_txt"
                        android:layout_marginBottom="100dp"/>

                    <!-- Actions description -->
                    <TextView
                        style="@style/Action"
                        android:id="@+id/legs_txt"/>

                </FrameLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/feet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="210">

                <!-- Background -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/feet"/>

                <!-- Text -->
                <FrameLayout
                    style="@style/Box"
                    android:id="@+id/feet_box"
                    android:visibility="invisible"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="205dp"
                    android:layout_height="100dp">

                    <!-- Special ability title -->
                    <TextView
                        style="@style/Phase"
                        android:text="@string/special_txt"
                        android:layout_marginBottom="75dp"/>

                    <!-- Actions description -->
                    <TextView
                        style="@style/Action"
                        android:id="@+id/feet_txt"/>

                </FrameLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
